graficas y estadisticas de plagas

--- a/prueba-tecnica-front/src/index.html
+++ b/prueba-tecnica-front/src/index.html
@@ -38,6 +38,12 @@
     <!-- SLEEK CSS -->
     <link id="sleek-css" rel="stylesheet" href="assets/css/sleek.css" />
     <script src="assets/plugins/nprogress/nprogress.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
   </head>
   <body class="header-fixed sidebar-fixed sidebar-dark header-light" id="body">
     <app-root></app-root>
